# timur

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh  simple.bc  test.tmr
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  codegen_stdlib.cpp  core.tmr  lexer.cpp  lexer.h  location.hh  main.cpp  parser.tab.cpp  parser.tab.hpp  parser.ypp  print.hpp  seman.cpp  seman.h
